--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [ '1.18beta1', '1.17', '1.16', '1.15' ]
+        go-version: [ '1.18.0-beta1', '1.17', '1.16', '1.15' ]
         platform: [ 'ubuntu-latest' ]
     runs-on: ${{ matrix.platform }}
     steps:
