--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
+          stable: ${{ !contains(matrix.go, 'beta') }}
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run tests
