--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15.x
+          go-version: 1.18.x
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run linters
@@ -25,7 +25,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [ '1.18.0-beta1', '1.17', '1.16', '1.15' ]
+        go-version: [ '1.19', '1.18' ]
         platform: [ 'ubuntu-latest' ]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -47,7 +47,7 @@ jobs:
         if: success()
         uses: actions/setup-go@v2
         with:
-          go-version: 1.15.x
+          go-version: 1.18.x
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Calc coverage
