--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,19 +8,18 @@ on:
 
 name: run tests
 jobs:
-  lint:
+  golangci:
+    name: lint
     runs-on: ubuntu-latest
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.18.x
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Run linters
-        uses: golangci/golangci-lint-action@v2
+          go-version: 1.18
+      - uses: actions/checkout@v3
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.29
+          version: v1.50
 
   test:
     strategy:
