--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,43 +12,43 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
-        with:
-          go-version: 1.18
       - uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.50
+          version: v1.52
 
   test:
     strategy:
       matrix:
-        go-version: [ '1.19', '1.18' ]
+        go-version: [ '1.20' ]
         platform: [ 'ubuntu-latest' ]
     runs-on: ${{ matrix.platform }}
     steps:
+      - uses: actions/checkout@v3
       - name: Install Go
         if: success()
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
           stable: ${{ !contains(matrix.go-version, 'beta') }}
-      - name: Checkout code
-        uses: actions/checkout@v2
       - name: Run tests
         run: go test -v ./...
 
   coverage:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Install Go
         if: success()
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.18.x
-      - name: Checkout code
-        uses: actions/checkout@v2
+          go-version: '1.20'
       - name: Calc coverage
         run: |
           go test -v -covermode=count -coverprofile=coverage.out ./...
