--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,6 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
-          stable: ${{ !contains(matrix.go-version, 'beta') }}
       - name: Run tests
         run: go test -v ./...
 
@@ -52,6 +51,6 @@ jobs:
           go-version: '1.20'
       - name: Calc coverage
         run: |
-          go test -v -covermode=atomic -coverprofile=coverage.txt ./...
+          go test -cover ./... -coverpkg=github.com/networkteam/construct/... -coverprofile=coverage.txt
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
